Autoscaling Group.tf
#==========================================================================================
/*data "aws_ami" "latest_ubuntu" {
  owners = ["099720109477"]
  most_recent = true
  filter {
    name = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
}
*/

/*
data "aws_ami" "latest_amazon" {
  owners = ["137112412989"]
  most_recent = true
  filter {
    name = "name"
    values = ["amzn2-ami-kernel-5.10-hvm-*-x86_64-gp2"]
  }
}
*/

data "aws_ami" "latest_packer_image" {
  owners = ["558664324013"]
  most_recent = true
  filter {
    name = "name"
    values = ["ubuntu-nginx"]
  }
}


resource "aws_security_group" "my_webserver" {
  name        = "Web Server Security Group"
  description = "My First Security Group"
  vpc_id = aws_vpc.main.id
  dynamic "ingress" {
    for_each = ["80", "443", "22"]
    content {
      from_port    = ingress.value
      to_port      = ingress.value
      protocol     = "tcp"
      cidr_blocks  = ["0.0.0.0/0"]

    }
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
tags = {
      Name = "Security Group Build by Terraform"
      Owner = "Narek Arakelyan"
    } 
}


resource "aws_launch_configuration" "Web" {
  #name = "WebServer-Highly-Available"
  name_prefix = "WebServer-Highly-Available-LC-"
  image_id = data.aws_ami.latest_packer_image.id
  instance_type = "t2.micro"
  security_groups = [aws_security_group.my_webserver.id]
  key_name = "narek-key.n.virginia"
  
  lifecycle {
    create_before_destroy = true
  }
}



resource "aws_autoscaling_group" "web" {
  name = "ASG-${aws_launch_configuration.Web.name}"
  launch_configuration = aws_launch_configuration.Web.name
  min_size = 2
  max_size = 2
  min_elb_capacity = 2
  vpc_zone_identifier = [aws_subnet.public_subnet[0].id, aws_subnet.public_subnet[1].id]
  health_check_type = "ELB"
  target_group_arns = [aws_lb_target_group.http.arn]
  #load_balancers = [aws_lb.web.name]
 
  
  dynamic "tag" {
    for_each = {
      Name   = "WebServer in ASG"
      Owner  = "Narek Arakelyan"
      TAGKEY = "TAGVALUE"
    }
    content {
      key                 = tag.key
      value               = tag.value
      propagate_at_launch = true
    }
  }


  lifecycle {
    create_before_destroy = true
    }
  }

resource "aws_lb" "web" {
  name               = "web-server"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.my_webserver.id]
  subnets            = [aws_subnet.public_subnet[0].id, aws_subnet.public_subnet[1].id]

  enable_deletion_protection = false


  tags = {
    Name = "WebServer-Highly_Available_ALB"
  }
}

resource "aws_lb_target_group" "http" {
  name     = "web-server-http"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}


resource "aws_autoscaling_attachment" "asg_attachment_bar" {
  autoscaling_group_name = aws_autoscaling_group.web.id
  lb_target_group_arn    = aws_lb_target_group.http.arn

  depends_on = [
    aws_autoscaling_group.web
  ]
}


resource "aws_lb_listener" "forward" {
  load_balancer_arn = aws_lb.web.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.cert.id

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.http.arn
  }
}




resource "aws_lb_listener" "redirect" {
  load_balancer_arn = aws_lb.web.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}



/*
resource "aws_elb" "web" {
  name = "WebServer-HA-ELB"
  #availability_zones = [data.aws_availability_zones.available.names[0]]
  security_groups = [aws_security_group.my_webserver.id]
  subnets = [data.terraform_remote_state.vpc.outputs.aws_public_subnet1_id, data.terraform_remote_state.vpc.outputs.aws_public_subnet2_id]

  listener {
    lb_port = 80
    lb_protocol = "http"
    instance_port = 80
    instance_protocol = "http"
  }
  listener {
    instance_port      = 80
    instance_protocol  = "http"
    lb_port            = 443
    lb_protocol        = "https"
    ssl_certificate_id = data.terraform_remote_state.route53.outputs.certificate_id 
  }


  
  health_check {
    healthy_threshold = 2
    unhealthy_threshold = 2
    timeout = 3
    target = "HTTP:80/"
    interval = 10
  }

  tags = {
    Name = "WebServer-Highly_Available_ELB"
  }
}
*/
